Fix issue where optionise with a shipping option would only use the shipping option if the row was a complete bug/sell.